# tiders-core

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish-python.yaml  release.yml
cast/: Cargo.toml
cast/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  tests.rs
evm-decode/: Cargo.toml
evm-decode/src/: abi.rs  arrow_convert.rs  lib.rs
evm-schema/: Cargo.toml
evm-schema/src/: lib.rs
ingest/: Cargo.toml
ingest/src/: evm.rs  lib.rs  svm.rs
ingest/src/provider/: common.rs  hypersync.rs  mod.rs  rpc.rs  sqd.rs
python/: Cargo.toml  README.md  pyproject.toml
python/cherry_core/: __init__.py
python/cherry_core/ingest/: __init__.py
python/examples/: base58.py  cryo_erc20.py  cryo_erc20_datafusion.py  hypersync_continuous.py  solana.py  solana_all.py  sqd_continuous.py  svm_decode_instruction.py  svm_decode_log.py  tiders_ingest_erc20.py  token_metadata.py  v2_pool_tokens.py  v_r_s_schema.py  yellowstone_grpc.py
python/src/: ingest.rs  lib.rs
python/tiders_core/: __init__.py
python/tiders_core/ingest/: __init__.py  evm.py  svm.py
python/tiders_core/svm_decode/: __init__.py
query/: Cargo.toml
query/src/: lib.rs
svm-decode/: Cargo.toml
svm-decode/src/: arrow_converter.rs  deserialize.rs  lib.rs
svm-schema/: Cargo.toml
svm-schema/src/: lib.rs
