[workspace]
resolver = "2"
members = [
  "evm-decode",
  "cast",
  "core",
  "evm-schema",
  "python",
  "ingest",
  "svm-schema",
  "query", 
  "svm-decode",
]

[workspace.dependencies]
arrow = "56"
alloy-dyn-abi = "1"
alloy-json-abi = "1"
alloy-primitives = "1"
alloy-consensus = "1"
alloy-eips = "1"
alloy-multicall = "1"
alloy-sol-types = { version = "1", features = ["json"] }
alloy-provider = "1"
ruint = "1"
anyhow = "1"
log = "0.4"
faster-hex = "0.10"
futures-lite = "2"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"
pyo3 = "0.25"
sqd-portal-client = "0.1"
hypersync-client = "0.19"
serde = "1"
serde_json = "1"
polars-arrow = "0.42"
bincode = "1"
chrono = "0.4"
bs58 = "0.5"
base64 = "0.22.1"
rayon = "1"
hashbrown = "0.16"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

