[workspace]
resolver = "2"
members = [
  "evm-decode",
  "cast",
  "core",
  "evm-schema",
  "python",
  "ingest",
  "svm-schema",
  "query", 
  "svm-decode",
]

[workspace.dependencies]
arrow = "56"
parquet = "56"
alloy-dyn-abi = "1"
alloy-json-abi = "1"
alloy-primitives = "1"
alloy-consensus = "1"
alloy-eips = "1"
alloy-multicall = "1"
alloy-sol-types = { version = "1", features = ["json"] }
alloy-provider = "1"
ruint = "1"
anyhow = "1"
log = "0.4"
faster-hex = "0.10"
futures-lite = "2"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1"
pyo3 = "0.25"
sqd-portal-client = "0.2"
hypersync-client = "0.19"
tiders-rpc-client = "0.1"
serde = "1"
serde_json = "1"
polars-arrow = "0.42"
bincode = "1"
chrono = "0.4"
bs58 = "0.5"
base64 = "0.22.1"
rayon = "1"
hashbrown = "0.16"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# ============================================
# Using rust-magic-linter STANDARD PRESET so agents follows rust best practices
# ============================================
# Based on https://github.com/vicnaum/rust-magic-linter

[workspace.lints.clippy]
# Enable pedantic group for comprehensive checks
pedantic = { level = "warn", priority = -1 }

# === THE GUARDRAILS (Critical for AI Agents) ===
# Panic safety - agents must handle errors, not crash
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# The "no cheating" rule
allow_attributes = "deny"

# Code hygiene - no debug leftovers
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# === ASYNC SAFETY ===
await_holding_lock = "deny"       # Prevents deadlocks

# === PROCESS SAFETY ===
exit = "deny"                     # Libraries shouldn't exit

# === PEDANTIC RELAXATIONS ===
# These are too noisy for most projects
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
