[package]
name = "cherry-cast"
version = "0.3.0"
edition = "2021"
description = "Library for casting arrow colums with support for specific blockchain types"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
ruint = { workspace = true }
anyhow = { workspace = true }
faster-hex = { workspace = true }
bs58 = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
parquet = { workspace = true }
