[package]
name = "tiders-core"
version = "0.1.1"
edition = "2021"
description = "Core library for tiders blockchain data framework"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
tiders-evm-decode = { path = "../evm-decode", version = "0.1.1" }
tiders-cast = { path = "../cast", version = "0.1.1" }
tiders-svm-decode = { path = "../svm-decode", version = "0.1.1" }
tiders-evm-schema = { path = "../evm-schema", version = "0.1.1" }
tiders-svm-schema = { path = "../svm-schema", version = "0.1.1" }
tiders-ingest = { path = "../ingest", version = "0.1.1" }
tiders-query = { path = "../query", version = "0.1.1" }

[dev-dependencies]
hypersync-client = { workspace = true } 
tokio = { version = "1", features = ["full"] }
polars-arrow = { workspace = true } 
arrow = { workspace = true, features = ["ffi"]}
serde_json = "1"
futures-lite = "2"
faster-hex = { workspace = true }

[features]
pyo3 = ["tiders-ingest/pyo3", "tiders-svm-decode/pyo3"]

[lints]
workspace = true
