[package]
name = "cherry-evm-decode"
version = "0.2.0"
edition = "2021"
description = "EVM decoding implementations in Arrow format"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-primitives = { workspace = true }
ruint = { workspace = true }
anyhow = { workspace = true }
log = { workspace =  true }

[dev-dependencies]
parquet = { workspace = true }

[lints]
workspace = true
