[package]
name = "tiders-evm-decode"
version = "0.1.1"
edition = "2021"
description = "EVM decoding implementations in Arrow format"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-primitives = { workspace = true }
ruint = { workspace = true }
anyhow = { workspace = true }
log = { workspace =  true }

[dev-dependencies]
parquet = { workspace = true }

[lints]
workspace = true
