[package]
name = "tiders-evm-schema"
version = "0.2.0"
edition = "2021"
description = "EVM schema definitions for tiders"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }

[lints]
workspace = true
