[package]
name = "cherry-ingest"
version = "0.5.0"
edition = "2021"
description = "Library for ingesting evm data using common a query/response format"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
sqd-portal-client = { workspace = true }
futures-lite = { workspace = true } 
anyhow = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }
polars-arrow = { workspace = true }
faster-hex = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
tokio-stream = { workspace = true }
pyo3 = { workspace = true, features = ["anyhow"], optional = true }
hypersync-client = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
bincode = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
bs58 = { workspace = true }
rayon = { workspace = true }

cherry-evm-schema = { path = "../evm-schema", version = "0.2.0" }
cherry-cast = { path = "../cast", version = "0.3.0" }
cherry-query = { path = "../query", version = "0.3.0" }
cherry-svm-schema = { path = "../svm-schema", version = "0.2.0" }

[dev-dependencies]
parquet = { workspace = true }
bs58 = { workspace = true }

[features]
pyo3 = ["dep:pyo3"]
