[package]
name = "tiders-ingest"
version = "0.5.0"
edition = "2021"
description = "Library for ingesting evm data using common a query/response format"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
sqd-portal-client = { workspace = true }
futures-lite = { workspace = true } 
anyhow = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }
polars-arrow = { workspace = true }
faster-hex = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
log = { workspace = true }
tokio-stream = { workspace = true }
pyo3 = { workspace = true, features = ["anyhow"], optional = true }
hypersync-client = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
bincode = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
bs58 = { workspace = true }
rayon = { workspace = true }

tiders-evm-schema = { path = "../evm-schema", version = "0.2.0" }
tiders-cast = { path = "../cast", version = "0.3.0" }
tiders-query = { path = "../query", version = "0.3.0" }
tiders-svm-schema = { path = "../svm-schema", version = "0.2.0" }
tiders-rpc-client = { path = "../../tiders-rpc-client/rust", version = "0.1.0" }

[dev-dependencies]
parquet = { workspace = true }
bs58 = { workspace = true }

[features]
pyo3 = ["dep:pyo3"]

[lints]
workspace = true
