[package]
name = "tiders-core-python"
version = "0.1.3"
edition = "2021"
description = "Core library for tiders blockchain data framework"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[lib]
name = "tiders_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["anyhow", "experimental-async"] }
baselib = { package = "tiders-core", path = "../core", features = ["pyo3"] }
arrow = { workspace = true , features = ["pyarrow"] }
anyhow = { workspace = true } 
faster-hex = { workspace = true } 
futures-lite = { workspace = true }
sqd-portal-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }
env_logger = "0.11"
log = { workspace = true }
bs58 = { workspace = true }
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls", "unprefixed_malloc_on_supported_platforms"] }

[lints]
workspace = true
