[package]
name = "cherry-query"
version = "0.3.0"
edition = "2021"
description = "Query executor for cherry"
homepage = "https://github.com/steelcake/cherry-core"
repository = "https://github.com/steelcake/cherry-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
hashbrown = { workspace = true }
xxhash-rust = { workspace = true }
