[package]
name = "tiders-query"
version = "0.3.0"
edition = "2021"
description = "Query executor for tiders"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
hashbrown = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
