[package]
name = "tiders-svm-decode"
version = "0.1.1"
edition = "2021"
description = "SVM decoding implementations in Arrow format"
homepage = "https://github.com/yulesa/tiders-core"
repository = "https://github.com/yulesa/tiders-core"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>, Yule <yule@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
arrow = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true, features = ["anyhow"], optional = true }
bs58 = { workspace = true }
base64 = { workspace = true }

[features]
pyo3 = ["dep:pyo3"]

[dev-dependencies]
parquet = { workspace = true }

[lints]
workspace = true
